# CircuitLock

./: .gitignore  CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitElement.h  CrackKey.cpp  CrackKey.h  EncryptedCircuit.cpp  EncryptedCircuit.h  Inst.cpp  Inst.h  OptionParser.h  Port.h  README.md  TechLibrary.cpp  TechLibrary.h  Wire.cpp  Wire.h  main.cpp  utils.h
benchmarks/: alu4.blif  c3540.blif  c3540.test  c880.blif  c880.test  i2c-strash.blif  i2c-strash.test  pci_spoci_ctrl-strash.blif  pci_spoci_ctrl-strash.test  sasc-strash.blif  sasc-strash.test  sasc_physical.blif  spi-strash.blif  spi-strash.test  systemcaes-strash.blif  systemcaes-strash.test  systemcdes-strash.blif  systemcdes-strash.test  tv80-strash.blif  tv80-strash.test  usb_funct-strash.blif  usb_phy-strash.blif  usb_phy-strash.test
integration_tests/: circuitlock_test_compare.py  test_aluxor.py  test_outcompare.py  test_seqxor.py  test_simple.py  test_simpxor.py
integration_tests/inputs/: alu4.blif  sasc.blif
integration_tests/outputs/: alu4.blif  majority.blif  majorityxor.blif  sasc.blif  test_aluxor.out  test_outcompare.out  test_seqxor.out  test_simple.out  test_simpxor.out
